# platziFlix

./: Platziflix.md
Backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  SEED_USAGE.md  docker-compose.yml  pyproject.toml  test_setup.py
Backend/app/: __init__.py  alembic.ini  init_db.py  main.py  seed_runner.py
Backend/app/alembic/: env.py
Backend/app/alembic/versions/: 04619eb01c8d_create_initial_tables.py  e27116ec238a_rename_classes_table_to_lessons.py
Backend/app/core/: config.py
Backend/app/db/: base.py  inspect_data.py  models.py  seed.py
Backend/app/db/models/: __init__.py  course.py  lesson.py  teacher.py
